--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,12 +1,1 @@
-/Buffer.class
-/Location$atLocation.class
-/Location.class
-/Login.class
-/Main.class
-/Player$Move.class
-/Player.class
-/PlayerAI.class
-/State.class
-/mapdb-0.9.2.jar
-/mapdb-1.0.6.jar
-/mapdb-3.0.7.jar
+/Server.class
