Added and modified code
Added a playerwindow class

added codes to enable multiple players playing

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,2 +1,8 @@
 /TestMain.class
 /Main$1.class
+/PlayerWindow.class
+/State$1.class
+/Player$Move.class
+/Server$1.class
+/Player$1.class
+/Player$2.class
