--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,8 +1,17 @@
-/TestMain.class
-/Main$1.class
-/PlayerWindow.class
-/State$1.class
-/Player$Move.class
-/Server$1.class
+/Buffer.class
+/Location.class
+/Login.class
+/Main.class
 /Player$1.class
 /Player$2.class
+/Player$Move.class
+/Player.class
+/PlayerAI.class
+/PlayerWindow.class
+/Server$1.class
+/Server.class
+/State$1.class
+/State.class
+/TestMain.class
+/UpdateSnake.class
+/mapdb-0.9.2.jar
